--- a/desktop/view/ui/mainwindow.ui
+++ b/desktop/view/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>2016</width>
-    <height>1069</height>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <rect>
       <x>30</x>
       <y>60</y>
-      <width>1911</width>
+      <width>1821</width>
       <height>931</height>
      </rect>
     </property>
@@ -37,10 +37,19 @@
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QLabel" name="TextLabel">
+           <property name="maximumSize">
+            <size>
+             <width>300</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="text">
             <string>List of Students</string>
            </property>
           </widget>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="StudentsListLayout"/>
          </item>
          <item>
           <spacer name="verticalSpacer_2">
@@ -56,6 +65,19 @@
           </spacer>
          </item>
         </layout>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Orientation::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </item>
@@ -80,7 +102,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>2016</width>
+     <width>1920</width>
      <height>33</height>
     </rect>
    </property>
@@ -88,8 +110,8 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionSaveConfig"/>
-    <addaction name="actionLoadConfog"/>
+    <addaction name="actionSaveSave"/>
+    <addaction name="actionLoadSave"/>
    </widget>
    <widget class="QMenu" name="menuSettings">
     <property name="title">
@@ -100,6 +122,7 @@
       <string>Video sourse</string>
      </property>
      <addaction name="actionVSDroidcam"/>
+     <addaction name="actionVSCameraByIndex"/>
     </widget>
     <addaction name="menuVideo_sourse"/>
    </widget>
@@ -107,12 +130,12 @@
    <addaction name="menuSettings"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionSaveConfig">
+  <action name="actionSaveSave">
    <property name="text">
     <string>Save</string>
    </property>
   </action>
-  <action name="actionLoadConfog">
+  <action name="actionLoadSave">
    <property name="text">
     <string>Load</string>
    </property>
@@ -120,6 +143,11 @@
   <action name="actionVSDroidcam">
    <property name="text">
     <string>Droidcam</string>
+   </property>
+  </action>
+  <action name="actionVSCameraByIndex">
+   <property name="text">
+    <string>Camera by index</string>
    </property>
   </action>
  </widget>
