--- a/desktop/view/ui/mainwindow.ui
+++ b/desktop/view/ui/mainwindow.ui
@@ -25,14 +25,7 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QLabel" name="ImageLabel">
-         <property name="text">
-          <string>ImageLabel</string>
-         </property>
-        </widget>
-       </item>
+      <layout class="QHBoxLayout" name="MainHLayout">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
