--- a/desktop/view/ui/mainwindow.ui
+++ b/desktop/view/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1920</width>
-    <height>1080</height>
+    <width>1471</width>
+    <height>934</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>60</y>
-      <width>1821</width>
-      <height>931</height>
+      <y>30</y>
+      <width>1411</width>
+      <height>851</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -95,8 +95,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1920</width>
-     <height>33</height>
+     <width>1471</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -108,7 +108,7 @@
    </widget>
    <widget class="QMenu" name="menuSettings">
     <property name="title">
-     <string>Settings</string>
+     <string>Video</string>
     </property>
     <widget class="QMenu" name="menuVideo_sourse">
      <property name="title">
@@ -118,6 +118,7 @@
      <addaction name="actionVSCameraByIndex"/>
     </widget>
     <addaction name="menuVideo_sourse"/>
+    <addaction name="actionScaleVideo"/>
    </widget>
    <widget class="QMenu" name="menuHUD">
     <property name="title">
@@ -153,6 +154,11 @@
   <action name="actionToggleHUD">
    <property name="text">
     <string>Toggle</string>
+   </property>
+  </action>
+  <action name="actionScaleVideo">
+   <property name="text">
+    <string>Scale</string>
    </property>
   </action>
  </widget>
