--- a/desktop/view/ui/mainwindow.ui
+++ b/desktop/view/ui/mainwindow.ui
@@ -96,7 +96,7 @@
      <x>0</x>
      <y>0</y>
      <width>1471</width>
-     <height>22</height>
+     <height>33</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -143,7 +143,7 @@
   </action>
   <action name="actionVSDroidcam">
    <property name="text">
-    <string>Droidcam</string>
+    <string>Network source</string>
    </property>
   </action>
   <action name="actionVSCameraByIndex">
